--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+    font-family: IRANSans;
+    font-style: normal;
+    font-weight: normal;
+    src: url('./Assets/Fonts/IRANSansWeb.eot');
+    src: url('./Assets/Fonts/IRANSansWeb.eot?#iefix') format('embedded-opentype'),
+    url('./Assets/Fonts/IRANSansWeb.woff2') format('woff2'),
+    url('./Assets/Fonts/IRANSansWeb.woff') format('woff'),
+    url('./Assets/Fonts/IRANSansWeb.ttf') format('truetype');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: IRANSans, serif;
+    font-size: 16px;
+    text-align: right;
+    direction: rtl;
+    background-color: #f2f2f2;
+    color: #333;
+}
+
+a,
+a:hover,
+a:active,
+a:focus {
+    text-decoration: none;
+    color: #333333;
+}
+
+img {
+    max-width: 100%;
+}
+
+.form-floating>.form-control-plaintext~label,
+.form-floating>.form-control:focus~label,
+.form-floating>.form-control:not(:placeholder-shown)~label,
+.form-floating>.form-select~label {
+    transform: scale(.8) translateY(-0.5rem) translateX(9rem);
+}
+
+.form-switch .form-check-input {
+    background-position: right center;
+}
+
+.form-switch .form-check-input:checked {
+    background-position: left center;
+}
+
+.modal-header .btn-close {
+    margin: 0 auto 0 0;
 }
